--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,7 +7,7 @@
 FROM amd64/alpine:20230901
 RUN apk update && \
     apk add --no-cache \
-        openjdk17-jre-headless=17.0.11_p9-r0
+    openjdk17-jre-headless=17.0.11_p9-r0
 
 # App user
 ARG APP_USER="mindustry"
@@ -29,13 +29,16 @@ RUN mkdir "$DATA_DIR" && \
 VOLUME ["$DATA_DIR"]
 
 #      GAME     STATUS
-# EXPOSE 6567/udp 6567/tcp
-EXPOSE 6567
+EXPOSE 6567/udp 6567/tcp
 
 USER "$APP_USER"
 WORKDIR "$DATA_DIR"
 ENV APP_BIN="$APP_BIN" \
     JAVA_OPT="-Xms8M -Xmx1G"
-ENTRYPOINT exec java $JAVA_OPT -jar "$APP_BIN"
-# CMD exec java $JAVA_OPT -jar "$APP_BIN"
-# ENTRYPOINT [ "/bin/bash" ]
+
+# Healthcheck: If Java is running, assume all ok.
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 CMD ["ps", "aux", "|", "grep", "java", "||", "exit", "1"]
+
+# Run Mindustry
+ENTRYPOINT ["exec", "java", "${JAVA_OPT}", "-jar", "$APP_BIN"]
+
