--- a/compose.yml
+++ b/compose.yml
@@ -4,31 +4,38 @@ services:
     build:
       context: ./app
 
-    # enable tty and stdin to make `docker attach` work
+    # enable tty and stdin to make `docker attach` work.
     stdin_open: true # docker run -i
     tty: true        # docker run -t
 
-    # Security - Disable write access within the container
+    # Security - Disable write access within the container.
     read_only: true
-    
-    # https://docs.docker.com/reference/cli/docker/container/run/#security-opt
-    # Security - Disable container processes from gaining new privileges 
-    security_opt:
-      - "no-new-privileges=true"
 
-    # Security - Disable all additional Docker capabilitis
+    # https://docs.docker.com/reference/cli/docker/container/run/#security-opt
+    # Security - Disable container processes from gaining new privileges.
+    security_opt:
+      - no-new-privileges:true
+
+    # Security - Disable all additional Docker capabilities.
     cap_drop:
       - ALL
 
-    # Exlicitly bind container ports to localhost
+    # Explicitly bind container ports to localhost.
     ports:
       - "127.0.0.1:6567:6567"
 
-    # Restart the container if it hits any issues.
-    # NB: this will reload the server but not neccessarily a running game.
+    # Healthcheck will tell us if the application has frozen.
+    healthcheck:
+      interval: 30s
+      timeout: 30s
+      retries: 3
+      test: ["CMD", "ps", "aux", "|", "grep", "java", "||", "exit", "1"]
+
+    # Restart the container if healthcheck fails.
+    # NB: this will reload the server but not necessarily a running game.
     restart: always
 
-    # Ensure data is persistent outside the container
+    # Ensure data is persistent outside the container.
     volumes:
       - mindustry-data:/mindustry
 
