--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -8,6 +8,7 @@ DISABLE_LINTERS:
   - JSON_PRETTIER
   - YAML_PRETTIER
   - COPYPASTE_JSCPD
+  - REPOSITORY_DEVSKIM 
 EMAIL_REPORTER: false
 SPELL_FILTER_REGEX_EXCLUDE: (fonts|\.github|.mega-linter.yml)
 LATEX_CHKTEX_ARGUMENTS: --nowarn 13
