--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -9,11 +9,12 @@ DISABLE_LINTERS:
   - YAML_PRETTIER
   - COPYPASTE_JSCPD
   - REPOSITORY_DEVSKIM
+  - REPOSITORY_CHECKOV
 EMAIL_REPORTER: false
 SPELL_FILTER_REGEX_EXCLUDE: (\.cspell.json|\.gitignore|\.github|.mega-linter.yml)
 
 # Limit the severiy required to fail the KICS job.
-TERRAFORM_KICS_ARGUMENTS: "--fail-on 'medium'"
+TERRAFORM_KICS_ARGUMENTS: "--fail-on critical,high,medium"
 
 # Allow JSON Comments.
 JSON_JSONLINT_ARGUMENTS: --comments
